hphp/hack/test/typecheck/reified_generics/newable_static_method_call.php.exp
ERROR: File "newable_static_method_call.php", line 15, characters 6-6:
Cannot call `A::f()`; it is abstract (Typing[4073])
  File "newable_static_method_call.php", line 6, characters 35-35:
  Declaration is here
